Add link to stackoverflow profile

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <h6>&nbsp;</h6>
             <ul>
               <li><a href="https://github.com/orbitbot">github profile</a></li>
+              <li><a href="https://stackoverflow.com/users/3497867/orbitbot">stackoverflow profile</a></li>
               <li><a href="http://pad.dy.fi">personal blog</a></li>
             </ul>
           </div>
@@ -38,7 +39,7 @@
           </div>
         </div>
     </div>
-    
+
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-58175967-5']);
@@ -48,6 +49,6 @@
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
-    </script>    
+    </script>
   </body>
 </html>
