Added link to mithril-pouch-todo page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <h6>project demo pages</h6>
             <ul>
               <li><a href="https://orbitbot.github.io/pouch-todo">pouch-todo</a></li>
+              <li><a href="https://orbitbot.github.io/mithril-pouch-todo">mithril-pouch-todo</a></li>
               <li><a href="https://orbitbot.github.io/Skeleton-skeleton">Skeleton-skeleton</a></li>
               <li><a href="https://orbitbot.github.io/colorsocks.js">colorsocks.js</a></li>
             </ul>
